fix scrollbars

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,9 +15,9 @@
 .data-panels {
   grid-area: data-panels;
   display: grid;
-  grid-template-columns: 22.5% 8.5% 46.5% 22.5%;
+  grid-template-columns: 69% 8.5% 22.5%;
   gap: 0px 0px;
-  grid-template-areas: "accessibility-panel persona-panel graph-panel information-panel";
+  grid-template-areas: "graph-panel persona-panel information-panel";
   background-color: $background-light;
   border-radius: 0.75rem;
   overflow: hidden;
@@ -28,15 +28,6 @@
   border-radius: 0.75rem;
   margin-right: -0.75rem;
   user-select: none;
-}
-
-.accessibility-panel {
-  grid-area: accessibility-panel;
-  background-color: $light;
-  margin-right: -0.75rem;
-  padding: 1rem 0 1rem 1rem;
-  border-radius: 0.75rem;
-  filter: drop-shadow(0px -0.375rem 0.375rem rgba(0, 0, 0, 0.25));
 }
 
 .persona-panel {
@@ -51,6 +42,7 @@
 .graph-panel {
   grid-area: graph-panel;
   background-color: $white;
+  margin-right: -0.75rem;
   border-radius: 0.75rem;
   filter: drop-shadow(0px -0.375rem 0.375rem rgba(0, 0, 0, 0.25));
   user-select: none;
