--- a/src/assets/partials/_variables.scss
+++ b/src/assets/partials/_variables.scss
@@ -9,3 +9,9 @@ $gray-3: #828282;
 $gray-4: #bdbdbd;
 $gray-5: #d2d2d2;
 $gray-6: #f2f2f2;
+
+$primary-scroll-background: #942424;
+$primary-scroll-foreground: #d34a4a;
+
+$accent-scroll-background: $light;
+$accent-scroll-foreground: $accent;
